Attitude Adjuster Changes

--- a/MoodFix/Views/Fixes/Index.cshtml
+++ b/MoodFix/Views/Fixes/Index.cshtml
@@ -15,7 +15,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.order)
+                @Html.DisplayNameFor(model => model.ordering)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.heading)
@@ -39,7 +39,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.order)
+                @Html.DisplayFor(modelItem => item.ordering)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.heading)
