--- a/MoodFix/Views/Home/Index.cshtml
+++ b/MoodFix/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Fix My Mood";
+    ViewData["Title"] = "Need to adjust your attitude? Fix your mood?";
 }
 
 @section Scripts {
