--- a/MoodFix/Views/Fixes/Create.cshtml
+++ b/MoodFix/Views/Fixes/Create.cshtml
@@ -15,9 +15,9 @@
         <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="order" class="control-label"></label>
-                <input asp-for="order" class="form-control" />
-                <span asp-validation-for="order" class="text-danger"></span>
+                <label asp-for="ordering" class="control-label"></label>
+                <input asp-for="ordering" class="form-control" />
+                <span asp-validation-for="ordering" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="heading" class="control-label"></label>
