--- a/MoodFix/Views/Fixes/Edit.cshtml
+++ b/MoodFix/Views/Fixes/Edit.cshtml
@@ -17,9 +17,9 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ID" />
                 <div class="form-group">
-                    <label asp-for="order" class="control-label"></label>
-                    <input asp-for="order" class="form-control" />
-                    <span asp-validation-for="order" class="text-danger"></span>
+                    <label asp-for="ordering" class="control-label"></label>
+                    <input asp-for="ordering" class="form-control" />
+                    <span asp-validation-for="ordering" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="heading" class="control-label"></label>
