--- a/MoodFix/Views/Home/About.cshtml
+++ b/MoodFix/Views/Home/About.cshtml
@@ -8,9 +8,9 @@
         <div class="notButtonsBox" style="width:inherit">
             <h2>@ViewData["Title"]</h2>
             <h3>This site is intended for my use only - don't like it? I don't care! </h3>
-
-            <h3>Saying that if you have actual constructive feedback I'd love to hear it - you can send me an email at blake.m.stone@gmail.com</h3>
-            <h3>The site is obviously free but for big fans you can donate some bitcoin for server costs here: 1KGL7r2ZadbJyUUbHpucsnExAE1H9sLi6g</h3>
+            <h3>If you'd like to tell me of your offense in person you can find me at your mother's house. She says hi.</h3>
+            <h3>Saying all that if you have actual constructive feedback I'd love to hear it - you can send me an email at blake.m.stone@gmail.com</h3>
+            @*<h3>The site is obviously free but for big fans you can donate some bitcoin for server costs here: 1KGL7r2ZadbJyUUbHpucsnExAE1H9sLi6g</h3>*@
             </div>
         </div>
     </div>
