Motivation section added

--- a/MoodFix/Views/Home/Motivation.cshtml
+++ b/MoodFix/Views/Home/Motivation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Frustrated General";
+    ViewData["Title"] = "Motivation";
 }
 
 @section Scripts {
@@ -57,12 +57,12 @@
 
     <div class="adviceBox">
         <div class="notButtonsBox">
-            <h1 id="Title" class="title">General Frustration</h1>
-            <h2 id="Text" class="textMain">Might be </h2>
-            <div class="imgBox"><img src="~/images/frustrated.png" /> </div>
+            <h1 id="Title" class="title">Lacking Motivation/Lazy</h1>
+            <h2 id="Text" class="textMain">Good news! If you made it this far (and as far as the icecream) you can probably click through this advice. </h2>
+            <div class="imgBox"><img src="~/images/lazy.png" /> </div>
         </div>
         <button style="display:none" id="Back" type="submit" value="1" class="backButton button glow pulse Back">Back</button>
-        <button id="Next" type="submit" value="201" class="forwardButton button glow pulse Next">Continue</button>
+        <button id="Next" type="submit" value="701" class="forwardButton button glow pulse Next">Continue</button>
     </div>
 
 </div>
