--- a/MoodFix/Views/Home/WhichIsYou.cshtml
+++ b/MoodFix/Views/Home/WhichIsYou.cshtml
@@ -19,7 +19,7 @@
         </div>
         <div class="imgBoxList next">
             <a asp-action="Frustrated">
-                <img src="~/images/frustrated.png" value="300" alt="frustrated"  /><div class="descriptor">Frustrated</div>
+                <img src="~/images/frustrated.png" value="300" alt="frustrated" /><div class="descriptor">Frustrated</div>
             </a>
         </div>
         <div class="imgBoxList next">
@@ -35,7 +35,12 @@
         </div>
         <div class="imgBoxList next">
             <a asp-action="Blurg">
-                <img src="~/images/exhausted.png" value="600" alt="blurg"  /><div class="descriptor">Blurg</div>
+                <img src="~/images/exhausted.png" value="600" alt="blurg" /><div class="descriptor">Blurg</div>
+            </a>
+        </div>
+        <div class="imgBoxList next">
+            <a asp-action="Motivation">
+                <img src="~/images/lazy.png" value="600" alt="blurg" /><div class="descriptor">Unmotivated</div>
             </a>
         </div>
         @*<div class="imgBoxList next">
