Added Addiction section

--- a/MoodFix/Views/Home/Motivation.cshtml
+++ b/MoodFix/Views/Home/Motivation.cshtml
@@ -57,8 +57,7 @@
 
     <div class="adviceBox">
         <div class="notButtonsBox">
-            <h1 id="Title" class="title">Lacking Motivation/Lazy</h1>
-            <h2 id="Text" class="textMain">Good news! If you made it this far (and as far as the icecream) you can probably click through this advice. </h2>
+            <h1 id="Title" class="title">Lacking Motivation/Lazy</h1>            <h2 id="Text" class="textMain">Good news! If you made it this far (and as far as the icecream) you can probably click through this advice. </h2>
             <div class="imgBox"><img src="~/images/lazy.png" /> </div>
         </div>
         <button style="display:none" id="Back" type="submit" value="1" class="backButton button glow pulse Back">Back</button>
