--- a/MoodFix/Views/Home/WhichIsYou.cshtml
+++ b/MoodFix/Views/Home/WhichIsYou.cshtml
@@ -43,6 +43,11 @@
                 <img src="~/images/lazy.png" value="600" alt="blurg" /><div class="descriptor">Unmotivated</div>
             </a>
         </div>
+        <div class="imgBoxList next">
+            <a asp-action="Addiction">
+                <img src="~/images/addiction.png" value="600" alt="addiction" /><div class="descriptor">Addiction</div>
+            </a>
+        </div>
         @*<div class="imgBoxList next">
             <a asp-action="Incredibly Good Looking">
                 <img src="~/images/looker.png" value="300" /><div class="descriptor">Incredibly Good Looking</div>
