--- a/MoodFix/Views/Home/Addiction.cshtml
+++ b/MoodFix/Views/Home/Addiction.cshtml
@@ -1,26 +1,68 @@
 ﻿@{
-    ViewData["Title"] = "Frustrated";
+    ViewData["Title"] = "Addiction";
 }
+
+@section Scripts {
+    <script type="text/javascript">
+
+        $(".Next").click(function () {
+            var nextLocation = $(".Next").val();
+            if (nextLocation == 1) { window.location.replace('/'); }
+            $(".imgBox").remove();
+
+            $.getJSON('@Url.Action("GetNextFix")', { order: nextLocation }, function (nextFix) {
+                if (nextFix != null && !jQuery.isEmptyObject(nextFix))
+                {
+                    console.log(nextFix);
+                    $("#Back").show();
+                    $("#Title").text(nextFix.heading);
+                    $("#Text").text(nextFix.maintext);
+                    $(".Next").val(nextFix.nextvalue);
+                    $(".Back").val(nextFix.backvalue);
+                    node = document.getElementById('Text');
+                    // Add an image if it exists
+                    if (nextFix.image != null && !jQuery.isEmptyObject(nextFix.image))
+                    {
+                        node.insertAdjacentHTML('afterend', '<div class="imgBox"><img src="../images/' + nextFix.image + '" /> </div>');
+                    }
+                }
+            });
+        });
+
+        $(".Back").click(function () {
+            var nextLocation = $(".Back").val();
+            $(".imgBox").remove();
+            $.getJSON('@Url.Action("GetNextFix")', { order: nextLocation }, function (nextFix) {
+                if (nextFix != null && !jQuery.isEmptyObject(nextFix))
+                {
+                    console.log(nextFix);
+                    $("#Back").show();
+                    $("#Title").text(nextFix.heading);
+                    $("#Text").text(nextFix.maintext);
+                    $(".Next").val(nextFix.nextvalue);
+                    $(".Back").val(nextFix.backvalue);
+                    // Add an image if it exists
+                    if (nextFix.image != null && !jQuery.isEmptyObject(nextFix.image))
+                    {
+                        node.insertAdjacentHTML('afterend', '<div class="imgBox"><img src="../images/' + nextFix.image + '" /> </div>');
+                    }
+                }
+            });
+        });
+
+    </script>
+}
+
 <div class="bigBox">
 
     <div class="adviceBox">
-        <h1 id="Title" class="title">Frustration is the worst!</h1>
-        <h2 id="Text" class="textMain">Can't do anything and it's driving you wild? It's like a buffet just out of your reach!</h2>
-        <div class="imgBoxList next">
-            <a asp-action="FrustratedThoughtlessness">
-                <img src="~/images/thoughtlessness.png" value="110" /><div class="descriptor">Thoughtlessness</div>
-            </a>
+        <div class="notButtonsBox">
+            <h1 id="Title" class="title">Addiction...What's you're poison?</h1>
+            <h2 id="Text" class="textMain">Addiction ruins lives. If you have a addictive personality you'll be predisposed to them too so be afraid - almost nothing will ruin you faster. </h2> 
+            <div class="imgBox"><img src="~/images/addiction.png" alt="Addiction" /> </div>
         </div>
-        <div class="imgBoxList next">
-            <a asp-action="FrustratedInjustice">
-                <img src="~/images/injustice.png" value="120" /><div class="descriptor">Injustice</div>
-            </a>
-        </div>
-        @*<div class="imgBoxList next">
-            <a asp-action="FrustratedGeneral">
-                <img src="~/images/frustrated.png" value="130" /><div class="descriptor">General</div>
-            </a>
-        </div>*@           
+        <button style="display:none" id="Back" type="submit" value="1" class="backButton button glow pulse Back">Back</button>
+        <button id="Next" type="submit" value="801" class="forwardButton button glow pulse Next">Continue</button>
     </div>
 
 </div>
