--- a/AIRelief/Views/Questions/Create.cshtml
+++ b/AIRelief/Views/Questions/Create.cshtml
@@ -44,44 +44,59 @@
                 <span asp-validation-for="nextvalue" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer1" class="control-label"></label>
-                <input asp-for="Answer1" class="form-control" />
-                <span asp-validation-for="Answer1" class="text-danger"></span>
+                <label asp-for="correctiontext" class="control-label"></label>
+                <input asp-for="correctiontext" class="form-control" />
+                <span asp-validation-for="correctiontext" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer2" class="control-label"></label>
-                <input asp-for="Answer2" class="form-control" />
-                <span asp-validation-for="Answer2" class="text-danger"></span>
+                <label asp-for="correctionimage" class="control-label"></label>
+                <input asp-for="correctionimage" class="form-control" />
+                <span asp-validation-for="correctionimage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer3" class="control-label"></label>
-                <input asp-for="Answer3" class="form-control" />
-                <span asp-validation-for="Answer3" class="text-danger"></span>
+                <label asp-for="Option1" class="control-label"></label>
+                <input asp-for="Option1" class="form-control" />
+                <span asp-validation-for="Option1" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer4" class="control-label"></label>
-                <input asp-for="Answer4" class="form-control" />
-                <span asp-validation-for="Answer4" class="text-danger"></span>
+                <label asp-for="Option2" class="control-label"></label>
+                <input asp-for="Option2" class="form-control" />
+                <span asp-validation-for="Option2" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer5" class="control-label"></label>
-                <input asp-for="Answer5" class="form-control" />
-                <span asp-validation-for="Answer5" class="text-danger"></span>
+                <label asp-for="Option3" class="control-label"></label>
+                <input asp-for="Option3" class="form-control" />
+                <span asp-validation-for="Option3" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer6" class="control-label"></label>
-                <input asp-for="Answer6" class="form-control" />
-                <span asp-validation-for="Answer6" class="text-danger"></span>
+                <label asp-for="Option4" class="control-label"></label>
+                <input asp-for="Option4" class="form-control" />
+                <span asp-validation-for="Option4" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer7" class="control-label"></label>
-                <input asp-for="Answer7" class="form-control" />
-                <span asp-validation-for="Answer7" class="text-danger"></span>
+                <label asp-for="Option5" class="control-label"></label>
+                <input asp-for="Option5" class="form-control" />
+                <span asp-validation-for="Option5" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer8" class="control-label"></label>
-                <input asp-for="Answer8" class="form-control" />
-                <span asp-validation-for="Answer8" class="text-danger"></span>
+                <label asp-for="Option6" class="control-label"></label>
+                <input asp-for="Option6" class="form-control" />
+                <span asp-validation-for="Option6" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Option7" class="control-label"></label>
+                <input asp-for="Option7" class="form-control" />
+                <span asp-validation-for="Option7" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Option8" class="control-label"></label>
+                <input asp-for="Option8" class="form-control" />
+                <span asp-validation-for="Option8" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CorrectAnswer" class="control-label"></label>
+                <input asp-for="CorrectAnswer" class="form-control" />
+                <span asp-validation-for="CorrectAnswer" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
