--- a/AIRelief/Views/Questions/Delete.cshtml
+++ b/AIRelief/Views/Questions/Delete.cshtml
@@ -49,52 +49,70 @@
             @Html.DisplayFor(model => model.nextvalue)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer1)
+            @Html.DisplayNameFor(model => model.correctiontext)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer1)
+            @Html.DisplayFor(model => model.correctiontext)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer2)
+            @Html.DisplayNameFor(model => model.correctionimage)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer2)
+            @Html.DisplayFor(model => model.correctionimage)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer3)
+            @Html.DisplayNameFor(model => model.Option1)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer3)
+            @Html.DisplayFor(model => model.Option1)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer4)
+            @Html.DisplayNameFor(model => model.Option2)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer4)
+            @Html.DisplayFor(model => model.Option2)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer5)
+            @Html.DisplayNameFor(model => model.Option3)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer5)
+            @Html.DisplayFor(model => model.Option3)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer6)
+            @Html.DisplayNameFor(model => model.Option4)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer6)
+            @Html.DisplayFor(model => model.Option4)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer7)
+            @Html.DisplayNameFor(model => model.Option5)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer7)
+            @Html.DisplayFor(model => model.Option5)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer8)
+            @Html.DisplayNameFor(model => model.Option6)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer8)
+            @Html.DisplayFor(model => model.Option6)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Option7)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Option7)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Option8)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Option8)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CorrectAnswer)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CorrectAnswer)
         </dd>
     </dl>
     
