--- a/AIRelief/Views/Questions/Index.cshtml
+++ b/AIRelief/Views/Questions/Index.cshtml
@@ -32,28 +32,37 @@
                 @Html.DisplayNameFor(model => model.nextvalue)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer1)
+                @Html.DisplayNameFor(model => model.correctiontext)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer2)
+                @Html.DisplayNameFor(model => model.correctionimage)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer3)
+                @Html.DisplayNameFor(model => model.Option1)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer4)
+                @Html.DisplayNameFor(model => model.Option2)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer5)
+                @Html.DisplayNameFor(model => model.Option3)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer6)
+                @Html.DisplayNameFor(model => model.Option4)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer7)
+                @Html.DisplayNameFor(model => model.Option5)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Answer8)
+                @Html.DisplayNameFor(model => model.Option6)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Option7)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Option8)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CorrectAnswer)
             </th>
             <th></th>
         </tr>
@@ -80,28 +89,37 @@
                 @Html.DisplayFor(modelItem => item.nextvalue)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer1)
+                @Html.DisplayFor(modelItem => item.correctiontext)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer2)
+                @Html.DisplayFor(modelItem => item.correctionimage)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer3)
+                @Html.DisplayFor(modelItem => item.Option1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer4)
+                @Html.DisplayFor(modelItem => item.Option2)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer5)
+                @Html.DisplayFor(modelItem => item.Option3)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer6)
+                @Html.DisplayFor(modelItem => item.Option4)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer7)
+                @Html.DisplayFor(modelItem => item.Option5)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Answer8)
+                @Html.DisplayFor(modelItem => item.Option6)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Option7)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Option8)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CorrectAnswer)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
