--- a/AIRelief/Views/Home/About.cshtml
+++ b/AIRelief/Views/Home/About.cshtml
@@ -7,9 +7,26 @@
     <div class="adviceBox" style="text-align:left;">
         <div class="notButtonsBox" style="width:inherit">
             <h2>@ViewData["Title"]</h2>
-            <h3>This site is intended for my use only - don't like it? I don't care! </h3>
-            <h3>If you'd like to tell me of your offense in person you can find me at your mother's house. She says hi.</h3>
-            <h3>Saying all that if you have actual constructive feedback I'd love to hear it - you can send me an email at blake.m.stone@gmail.com</h3>
+            <h3>
+                Who are we?</h3>
+            <p>
+                We are a multidisciplinary team interested in how people think, learn, and make decisions. Our team is based in Brisbane, Australia, with strong links to two of the major local universities. We include a professor of behavioural economics, a RANZCP-certified consultant psychiatrist, and an AI-focussed computer scientist who has worked for multiple tech companies.
+            Our combined experience in research, clinical practice, and technology allows us to create exercises and tools that are carefully targeted to address the types of cognitive atrophy that AI reliance is likely to bring.
+            </p>
+            <h3>
+                About the Exercises
+            </h3>
+            <p>
+                We have assembled a suite of problems designed to strengthen various skills likely to atrophy through ongoing AI exposure. Each takes the form of a short paragraph to be read and a multiple-choice response. However, unlike academic assessments typically undertaken at schools or universities, the goal here isn’t always to get the “correct” answer. Rather, the most beneficial approach is to engage, think deeply, and focus on training the underlying ability. Do the exercises slowly, and don’t shy away from exerting mental effort.
+            Our questions vary in terms of difficulty, and sometimes (deliberately) involve dealing with ambiguity, which means than several answers might be suitable.  In these instances, we have flagged the answers we regard as most appropriate (complete with an explanation) but note that other responses may be just as valid, especially when some subjective value judgements are involved.
+            Our exercises target:
+            •	Cognitive Reflection (Scrutinising superficially plausible arguments)
+            •	Reading Comprehension (Making sense of complicated text and ideas)
+            •	Causal Reasoning (Distinguishing association from causation)
+            •	Metacognition (Thinking about thinking)
+            •	Short-Term Memory (Simultaneously holding/recalling multiple pieces of information)
+            •	Confidence calibration (Developing intuition over the limits of knowledge).
+            </p>
             </div>
         </div>
     </div>
